--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.5",
         "realrashid/sweet-alert": "^4.0",
+        "spatie/laravel-activitylog": "^4.0",
         "spatie/laravel-permission": "^4.2"
     },
     "require-dev": {
